--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1224,6 +1224,6 @@
     <string name="lanczos_6_jinc">Ланцош 6 Jinc</string>
     <string name="lanczos_6_jinc_sub">Вариант фильтра Ланцоша 6, использующий функцию Jinc для улучшения качества ресемплинга изображений</string>
     <string name="not_use_color_blind_scheme">Не использовать схему дальтонизма</string>
-    <string name="sigmoidal">Сигмоидальный</string>
+    <string name="sigmoidal">Сигм.</string>
     <string name="not_use_color_blind_scheme_sub">Цвета будут такими же как в теме</string>
 </resources>
