Added Color Poster filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1284,4 +1284,5 @@
     <string name="gotham">Gotham</string>
     <string name="simple_sketch">Simple Sketch</string>
     <string name="soft_glow">Soft GLow</string>
+    <string name="color_poster">Color Poster</string>
 </resources>
