Added Tri Tone filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1285,4 +1285,6 @@
     <string name="simple_sketch">Simple Sketch</string>
     <string name="soft_glow">Soft GLow</string>
     <string name="color_poster">Color Poster</string>
+    <string name="tri_tone">Tri Tone</string>
+    <string name="third_color">Third color</string>
 </resources>
