--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1316,4 +1316,7 @@
     <string name="color_info">Color Info</string>
     <string name="selected_color">Selected Color</string>
     <string name="color_to_mix">Color To Mix</string>
+    <string name="cannot_use_monet_while_dynamic_colors_applied">Cannot use monet while dynamic colors are turned on</string>
+    <string name="lut512x512">LUT 512x512</string>
+    <string name="target_lut_image">Target LUT image</string>
 </resources>
