--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1338,4 +1338,9 @@
     <string name="save_empty_lut">Get Neutral LUT image</string>
     <string name="save_empty_lut_sub">First, use your favourite photo editing application to apply a filter to neutral LUT which you can obtain here. For this to work properly each pixel color must not depend on other pixels (e.g. blur will not work). Once ready, use your new LUT image as input for 512*512 LUT filter</string>
     <string name="pop_art">Pop Art</string>
+    <string name="celluloid">Celluloid</string>
+    <string name="coffee">Coffee</string>
+    <string name="golden_forest">Golden Forest</string>
+    <string name="greenish">Greenish</string>
+    <string name="retro_yellow">Retro Yellow</string>
 </resources>
