--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1258,4 +1258,71 @@
     <string name="backup_ocr_models">Резервное копирование моделей OCR</string>
     <string name="export">Экспорт</string>
     <string name="position">Расположение</string>
+    <string name="target_image">Целевое изображение</string>
+    <string name="palette_transfer">Перенос палитры</string>
+    <string name="enhanced_oil">Улучшенное масло</string>
+    <string name="simple_old_tv">Простой старый телевизор</string>
+    <string name="hdr">HDR</string>
+    <string name="gotham">Готэм</string>
+    <string name="simple_sketch">Простой эскиз</string>
+    <string name="soft_glow">Мягкое свечение</string>
+    <string name="color_poster">Цветной постер</string>
+    <string name="tri_tone">Три тона</string>
+    <string name="third_color">Третий цвет</string>
+    <string name="clahe_oklab">Clahe Oklab</string>
+    <string name="clahe_oklch">Clahe Oklch</string>
+    <string name="clahe_jzazbz">Clahe Jzazbz</string>
+    <string name="polka_dot">В горошек</string>
+    <string name="clustered_2x2_dithering">Кластерное 2x2 дизерирование</string>
+    <string name="clustered_4x4_dithering">Кластерное 4x4 дизерирование</string>
+    <string name="clustered_8x8_dithering">Кластерное 8x8 дизерирование</string>
+    <string name="yililoma_dithering">Дизерирование Yililoma</string>
+    <string name="no_favorite_options_selected">Не выбрано ни одной из любимых опций, добавьте их на странице инструментов</string>
+    <string name="add_favorites">Добавить в избранное</string>
+    <string name="harmony_complementary">Комплементарная</string>
+    <string name="harmony_analogous">Аналоговая</string>
+    <string name="harmony_triadic">Триадная</string>
+    <string name="harmony_split_complementary">Разделенная комплементарная</string>
+    <string name="harmony_tetradic">Тетрадная</string>
+    <string name="harmony_square">Квадратная</string>
+    <string name="harmony_analogous_complementary">Аналоговая + комплементарная</string>
+    <string name="color_tools">Инструменты цвета</string>
+    <string name="color_tools_sub">Смешивание, создание оттенков и многое другое</string>
+    <string name="color_harmonies">Цветовые гармонии</string>
+    <string name="color_shading">Тонирование цвета</string>
+    <string name="variation">Вариация</string>
+    <string name="tints">Оттенки</string>
+    <string name="tones">Тоны</string>
+    <string name="shades">Тени</string>
+    <string name="color_mixing">Смешивание цветов</string>
+    <string name="color_info">Информация о цвете</string>
+    <string name="selected_color">Выбранный цвет</string>
+    <string name="color_to_mix">Цвет для смешивания</string>
+    <string name="cannot_use_monet_while_dynamic_colors_applied">Невозможно использовать monet при включенных динамических цветах</string>
+    <string name="lut512x512">512x512 2D LUT</string>
+    <string name="target_lut_image">Целевое изображение LUT</string>
+    <string name="amatorka">Amatorka</string>
+    <string name="miss_etikate">Miss Etikate</string>
+    <string name="soft_elegance">Мягкая элегантность</string>
+    <string name="soft_elegance_variant">Вариант мягкой элегантности</string>
+    <string name="palette_transfer_variant">Вариант переноса палитры</string>
+    <string name="cube_lut">3D LUT</string>
+    <string name="target_cube_lut_file">Целевой 3D LUT файл (.cube / .CUBE)</string>
+    <string name="lut">LUT</string>
+    <string name="bleach_bypass">Bleach Bypass</string>
+    <string name="candlelight">Свет свечи</string>
+    <string name="drop_blues">Понижение синих</string>
+    <string name="edgy_amber">Острый янтарь</string>
+    <string name="fall_colors">Осенние цвета</string>
+    <string name="film_stock_50">Пленочный материал 50</string>
+    <string name="foggy_night">Туманная ночь</string>
+    <string name="kodak">Kodak</string>
+    <string name="save_empty_lut">Получить нейтральное изображение LUT</string>
+    <string name="save_empty_lut_sub">Сначала используйте ваше любимое приложение для редактирования фото, чтобы применить фильтр к нейтральному LUT, который вы можете получить здесь. Чтобы это работало правильно, цвет каждого пикселя не должен зависеть от других пикселей (например, размытие не сработает). Как только будете готовы, используйте ваше новое изображение LUT в качестве ввода для 512*512 фильтра LUT</string>
+    <string name="pop_art">Поп-арт</string>
+    <string name="celluloid">Целлулоид</string>
+    <string name="coffee">Кофе</string>
+    <string name="golden_forest">Золотой лес</string>
+    <string name="greenish">Зеленоватый</string>
+    <string name="retro_yellow">Ретро-желтый</string>
 </resources>
