--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="pick_two_images">Pick two images to start</string>
     <string name="pick_images">Pick images</string>
     <string name="settings">Settings</string>
-    <string name="night_mode">Theme</string>
+    <string name="night_mode">Night Mode</string>
     <string name="dark">Dark</string>
     <string name="light">Light</string>
     <string name="system">System</string>
