Fix Preset selector conflicts with quality options by #1257

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -304,7 +304,7 @@
     <string name="skip">Skip</string>
     <string name="copy">Copy</string>
     <string name="warning_bytes">Saving in %1$s mode can be unstable, because it is a lossless format</string>
-    <string name="presets_sub" formatted="false">If you have selected preset 125, image will be saved as 125% size of the original image with 100% quality. If you choose preset 50, then image will be saved with 50% size and 50% quality.</string>
+    <string name="presets_sub" formatted="false">If you have selected preset 125, image will be saved as 125% size of the original image. If you choose preset 50, then image will be saved with 50% size</string>
     <string name="presets_sub_bytes">Preset here determines % of output file, i.e. if you select preset 50 on 5mb image then you will get 2.5mb image after saving</string>
     <string name="randomize_filename">Randomize filename</string>
     <string name="randomize_filename_sub">If enabled output filename will be fully random</string>
